--- a/app/src/main/res/layout/client_category_list.xml
+++ b/app/src/main/res/layout/client_category_list.xml
@@ -4,8 +4,11 @@
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <ListView
-        android:id="@+id/category_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/category_client_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:divider="@color/darker_gray"
+        android:dividerHeight="1dp"/>
 </RelativeLayout>
