--- a/app/src/main/res/layout/client_category_list_item.xml
+++ b/app/src/main/res/layout/client_category_list_item.xml
@@ -7,7 +7,7 @@
     android:elevation="4dp">
 
     <ImageView
-        android:id="@+id/category_image"
+        android:id="@+id/category_client_image"
         android:layout_width="match_parent"
         android:layout_height="170dp"
         android:scaleType="centerCrop"
@@ -15,10 +15,10 @@
         android:layout_alignParentTop="true"/>
 
     <TextView
-        android:id="@+id/category_name"
+        android:id="@+id/category_client_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/category_image"
+        android:layout_below="@id/category_client_image"
         android:layout_marginTop="10dp"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
@@ -28,10 +28,10 @@
         android:textColor="@color/black"/>
 
     <TextView
-        android:id="@+id/category_description"
+        android:id="@+id/category_client_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/category_name"
+        android:layout_below="@id/category_client_name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
