--- a/app/src/main/res/layout/client_product_list.xml
+++ b/app/src/main/res/layout/client_product_list.xml
@@ -20,18 +20,18 @@
         android:hint="Buscar producto"
         android:padding="10dp" />
 
-    <ImageView
+    <ImageButton
         android:id="@+id/shopping_cart_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_shopping_cart"
+        android:background="@drawable/ic_shopping_cart"
         android:layout_alignParentEnd="true"
         android:layout_marginEnd="16dp"
         android:layout_marginTop="16dp"
         android:contentDescription="Carrito de compras"/>
 
-    <ListView
-        android:id="@+id/product_list"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/product_client_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/search_bar"
