--- a/app/src/main/res/layout/client_product_list_item.xml
+++ b/app/src/main/res/layout/client_product_list_item.xml
@@ -5,7 +5,7 @@
     android:padding="10dp">
 
     <TextView
-        android:id="@+id/product_name"
+        android:id="@+id/product_client_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Name"
@@ -15,29 +15,29 @@
         android:layout_alignParentTop="true"/>
 
     <TextView
-        android:id="@+id/product_description"
+        android:id="@+id/product_client_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Product Description"
         android:textSize="14sp"
         android:textColor="@color/darker_gray"
-        android:layout_below="@id/product_name"
+        android:layout_below="@id/product_client_name"
         android:layout_alignParentStart="true"
         android:layout_marginTop="4dp"/>
 
     <TextView
-        android:id="@+id/product_price"
+        android:id="@+id/product_client_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="1000000.0$"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:layout_below="@id/product_description"
+        android:layout_below="@id/product_client_description"
         android:layout_alignParentStart="true"
         android:layout_marginTop="4dp"/>
 
     <ImageView
-        android:id="@+id/product_image"
+        android:id="@+id/product_client_image"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:scaleType="centerCrop"
