--- a/app/src/main/res/layout/client_shopping_bag.xml
+++ b/app/src/main/res/layout/client_shopping_bag.xml
@@ -14,15 +14,17 @@
         app:title="Mi Orden"
         app:titleTextColor="@color/white"/>
 
-    <ListView
+
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shopping_cart_list"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="match_parent"
         android:layout_below="@id/toolbar"
         android:layout_above="@+id/bottom_bar"
         android:divider="@color/darker_gray"
         android:dividerHeight="1dp"/>
+
 
     <RelativeLayout
         android:id="@+id/bottom_bar"
