--- a/app/src/main/res/layout/roles_content.xml
+++ b/app/src/main/res/layout/roles_content.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RolesScreen">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/title"
@@ -23,14 +22,13 @@
         android:orientation="vertical"
         android:gravity="center">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/admin_role"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/user_image"
+            android:background="@drawable/user_image"
             android:contentDescription="Administrador"
-            android:layout_marginBottom="16dp"
-            android:onClick="onAdminRoleClick"/>
+            android:layout_marginBottom="16dp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -40,14 +38,13 @@
             android:textStyle="bold"
             android:layout_marginBottom="32dp"/>
 
-        <ImageView
+        <ImageButton
             android:id="@+id/client_role"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:src="@drawable/user_image"
+            android:background="@drawable/user_image"
             android:contentDescription="Cliente"
-            android:layout_marginBottom="16dp"
-            android:onClick="onClientRoleClick"/>
+            android:layout_marginBottom="16dp"/>
 
         <TextView
             android:layout_width="wrap_content"
