--- a/app/src/main/res/layout/admin_product_list_item.xml
+++ b/app/src/main/res/layout/admin_product_list_item.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#F8F7EE"
-    android:padding="15dp">
 
     <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/cardview_product_list_item_admin"
         android:layout_width="358dp"
         android:layout_height="174dp"
@@ -25,7 +21,7 @@
 
             <ImageView
                 android:id="@+id/image_product_list_item_admin"
-                android:layout_width="6dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:scaleType="centerCrop"
@@ -55,13 +51,13 @@
 
                 <TextView
                     android:id="@+id/product_description_list_item_admin"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="150dp"
+                    android:layout_height="40dp"
                     android:layout_marginBottom="14dp"
                     android:ellipsize="end"
-                    android:maxLines="3"
-                    android:text="Pan francés crujiente
-                     y suave."
+                    android:singleLine="true"
+                    android:maxLines="1"
+                    android:text="Pan francés crujiente&#10; y suave."
                     android:textColor="#757575"
                     android:textSize="14sp" />
 
@@ -105,4 +101,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
