--- a/app/src/main/res/layout/charts_not_found.xml
+++ b/app/src/main/res/layout/charts_not_found.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F7F6ED">
+    android:background="#F7F6ED"
+    android:id="@+id/constraintLayout">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
@@ -27,8 +28,9 @@
         android:text="Estamos preparando una función de estadísticas especialmente para ti. Pronto podrás acceder a información valiosa.\n\n Gracias por tu paciencia."
         android:textAlignment="center"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@+id/textView_message_charts"
-        tools:layout_editor_absoluteX="50dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_message_charts" />
 
     <TextView
         android:id="@+id/textView_message_charts"
@@ -40,7 +42,25 @@
         android:textColor="#45373D"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toBottomOf="@+id/animationView"
-        tools:layout_editor_absoluteX="69dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/animationView" />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/barnavadm"
+        style="@style/MyBottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
+        android:background="#90531D"
+        app:itemIconSize="@dimen/bottom_navigation_icon_size"
+        app:itemIconTint="@drawable/fientecbarra"
+        app:itemTextColor="#FFFEF5"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/barnav_menu_adm" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
