--- a/app/src/main/res/layout/admin_category_list.xml
+++ b/app/src/main/res/layout/admin_category_list.xml
@@ -24,7 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:fontFamily="@font/open_sans_semibold"
         android:text="@string/texvcateglist"
         android:textColor="#454243"
@@ -36,14 +36,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/category_list_admin"
-        android:layout_width="364dp"
-        android:layout_height="470dp"
+        android:layout_width="366dp"
+        android:layout_height="458dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="12dp"
         android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textT_principal_category_admin" />
+        app:layout_constraintTop_toBottomOf="@+id/text_category_list_admin" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_category_button"
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="12dp"
-        android:layout_marginEnd="11dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginBottom="72dp"
         android:contentDescription="@string/fab_btn_add_category"
         android:src="@drawable/plus"
@@ -60,7 +61,7 @@
         app:layout_constraintBottom_toTopOf="@+id/barnavadm"
         app:layout_constraintEnd_toEndOf="@+id/category_list_admin"
         app:layout_constraintTop_toBottomOf="@+id/category_list_admin"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.728" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/barnavadm"
