--- a/app/src/main/res/layout/admin_product_list.xml
+++ b/app/src/main/res/layout/admin_product_list.xml
@@ -6,6 +6,22 @@
     android:layout_height="match_parent"
     android:background="#F8F7EE">
 
+    <ImageButton
+        android:id="@+id/atras_button_admin_product_list"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="30dp"
+        android:layout_weight="1"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/btn_atras"
+        android:elevation="50dp"
+        android:padding="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
+
+
     <TextView
         android:id="@+id/textT_principal_product_admin"
         android:layout_width="wrap_content"
@@ -40,13 +56,11 @@
         android:id="@+id/product_list_admin"
         android:layout_width="354dp"
         android:layout_height="437dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.719"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_Product_list_admin"
-        tools:layout_editor_absoluteY="147dp"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/text_Product_list_admin" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_product_button_admin"
