--- a/app/src/main/res/layout/client_order_list.xml
+++ b/app/src/main/res/layout/client_order_list.xml
@@ -6,12 +6,14 @@
     android:layout_height="match_parent"
     android:background="#F8F7EE">
 
+
+
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="38dp"
         android:text="Lista de Pedidos"
         android:textColor="#45373D"
         android:textSize="24sp"
@@ -25,17 +27,16 @@
         android:layout_height="531dp"
         android:layout_marginBottom="32dp"
         android:dividerHeight="1dp"
-        app:layout_constraintBottom_toTopOf="@+id/barnavadm"
+        app:layout_constraintBottom_toTopOf="@+id/barnavcliente"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.477"
         app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/barnavadm"
+        android:id="@+id/barnavcliente"
         style="@style/MyBottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="65dp"
-        android:layout_alignParentBottom="true"
         android:background="#90531D"
         app:itemIconSize="@dimen/bottom_navigation_icon_size"
         app:itemIconTint="@drawable/fientecbarra"
@@ -43,8 +44,8 @@
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/barnav_menu_adm" />
+        app:menu="@menu/barnav_menu_cliente" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
