--- a/app/src/main/res/layout/client_order_success.xml
+++ b/app/src/main/res/layout/client_order_success.xml
@@ -8,6 +8,20 @@
     android:padding="20dp">
 
 
+    <ImageButton
+        android:id="@+id/atras_button_client_order_success"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="6dp"
+        android:layout_weight="1"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/btn_atras"
+        android:elevation="50dp"
+        android:padding="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
+
     <ImageView
         android:id="@+id/check_mark_image"
         android:layout_width="150dp"
