--- a/app/src/main/res/layout/client_shopping_bag.xml
+++ b/app/src/main/res/layout/client_shopping_bag.xml
@@ -8,29 +8,32 @@
 
 
     <TextView
-        android:id="@+id/toolbar_title"
+        android:id="@+id/toolbar_title_mi_pedido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
+        android:layout_marginTop="38dp"
+        android:layout_marginEnd="212dp"
         android:text="Mi Pedido"
         android:textColor="#45373D"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageButton" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/imageButton_client_shopping"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="32dp"
         android:background="@android:color/transparent"
+        android:contentDescription="@string/btn_atras"
+        app:layout_constraintEnd_toStartOf="@+id/toolbar_title_mi_pedido"
+        app:layout_constraintHorizontal_bias="0.571"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/baseline_arrow_back_24"
-        android:contentDescription="@string/btn_atras"/>
+        app:srcCompat="@drawable/baseline_arrow_back_24" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/shopping_cart_list"
@@ -38,8 +41,9 @@
         android:layout_height="440dp"
         android:layout_marginTop="38dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_title" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_title_mi_pedido" />
 
     <RelativeLayout
         android:id="@+id/bottom_bar"
