Add image picker library

--- a/app/src/main/res/layout/admin_product_list_item.xml
+++ b/app/src/main/res/layout/admin_product_list_item.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#F8F7EE"
-    android:padding="15dp">
+
 
     <androidx.cardview.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/cardview_product_list_item_admin"
         android:layout_width="358dp"
         android:layout_height="174dp"
@@ -25,7 +22,7 @@
 
             <ImageView
                 android:id="@+id/image_product_list_item_admin"
-                android:layout_width="6dp"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:scaleType="centerCrop"
@@ -104,5 +101,3 @@
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
